--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.vercel
 .DS_Store
 node_modules
 /build
@@ -9,3 +8,4 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+.vercel
